<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.openjdk.jmc</groupId>
	<artifactId>org.openjdk.jmc.console.ext.agent</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<jmc.agent.version>1.0.0-SNAPSHOT</jmc.agent.version>
		<java.version>1.8</java.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>

		<org.apache.maven.plugins.compiler.version>3.7.0</org.apache.maven.plugins.compiler.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjdk.jmc</groupId>
			<artifactId>org.openjdk.jmc.agent</artifactId>
			<version>${jmc.agent.version}</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${org.apache.maven.plugins.compiler.version}</version>
			</plugin>
		</plugins>
	</build> 
</project>
